[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rlox"
path = "src/lib/mod.rs"
[dependencies]
strum = { version = "0.24.1", features = ["derive"] }
substring = "1.4.5"
thiserror = "1.0.31"
